<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.android.droidcafeinput.MainActivity">
    <item android:id="@+id/action_contact"
          android:title="@string/action_contact"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_order"
          android:title="@string/action_order"
          android:icon="@drawable/ic_shopping_cart"
          android:orderInCategory="10"
          app:showAsAction="always"/>
    <item android:id="@+id/action_status"
          android:title="@string/action_status"
          android:icon="@drawable/ic_action_status"
          android:orderInCategory="20"
          app:showAsAction="always"/>
    <item android:id="@+id/action_favorites"
          android:title="@string/action_favourites"
          android:icon="@drawable/ic_action_favorite"
          android:orderInCategory="30"
          app:showAsAction="ifRoom"/>
</menu>